Added alternating grays to differentiate messages. Added front end button, no back end wiring yet.

--- a/public/style.css
+++ b/public/style.css
@@ -148,6 +148,10 @@ ul#participants{
   font-size: 150%;
 }
 
+.messages { list-style-type: none; margin: 0; padding: 0; }
+.messages li { padding: 5px 10px; }
+.messages li:nth-child(odd) { background: #eee; }
+
 .inputMessage {
   font-size: 100%;
 }
